# cpp_json_class_gen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
examples/GoogleApiEvent/: CMakeLists.txt
examples/GoogleApiEvent/config/: ApiEvent.json  ApiEventsList.json
examples/GoogleApiEvent/include/: BaseEvent.hpp
examples/GoogleApiEvent/meta_schemas/: ApiEvent.json  ApiEventsList.json
examples/GoogleApiEvent/schemas/: ApiEvent.json
examples/GoogleApiEvent/src/: main.cpp
src/: generator.cpp
